add sonar, jacoco